--- a/bridge/package.json
+++ b/bridge/package.json
@@ -16,31 +16,37 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0",
-    "ws": "^8.14.2",
-    "jsonwebtoken": "^9.0.2",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4",
+    "@modelcontextprotocol/sdk": "^1.17.3",
+    "chalk": "^5.3.0",
     "commander": "^11.1.0",
     "inquirer": "^9.2.12",
-    "chalk": "^5.3.0",
-    "ora": "^7.0.1"
+    "jsonwebtoken": "^9.0.2",
+    "ora": "^7.0.1",
+    "uuid": "^9.0.1",
+    "ws": "^8.14.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@types/ws": "^8.5.10",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/uuid": "^9.0.7",
     "@types/inquirer": "^9.0.7",
-    "typescript": "^5.3.3",
-    "ts-node-dev": "^2.0.0",
+    "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.4",
+    "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.8"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   },
-  "keywords": ["mcp", "mcpx", "bridge", "adapter", "multi-agent"],
+  "keywords": [
+    "mcp",
+    "mcpx",
+    "bridge",
+    "adapter",
+    "multi-agent"
+  ],
   "author": "MCPx Working Group",
   "license": "MIT"
 }
