--- a/packages/sdk-typescript/package.json
+++ b/packages/sdk-typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mcpx/sdk-typescript",
+  "name": "@mcpxp/sdk-typescript",
   "version": "0.1.0",
   "description": "MCPx TypeScript SDK",
   "main": "dist/index.js",
@@ -19,15 +19,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@mcpx/agent-client": "file:../agent-client",
+    "ws": "^8.14.2",
+    "eventemitter3": "^5.0.1",
+    "zod": "^3.22.4",
+    "debug": "^4.3.4",
     "commander": "^12.0.0",
     "chalk": "^5.3.0",
-    "readline": "^1.3.0",
-    "debug": "^4.3.4",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/ws": "^8.5.9",
     "@types/debug": "^4.1.12",
     "typescript": "^5.0.0"
   }
