README's and cleanup

--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "scripts": {
     "build": "npm run build --workspaces",
     "test": "npm run test --workspaces",
-    "dev:gateway": "npm run dev -w @mcpx/gateway",
-    "dev:web": "npm run dev -w @mcpx/web-client",
-    "dev:bridge": "npm run dev -w @mcpx/bridge",
+    "dev:gateway": "npm run dev -w @mcpxp/gateway",
+    "dev:web": "npm run dev -w @mcpxp/web-client",
+    "dev:bridge": "npm run dev -w @mcpxp/bridge",
+    "build:client": "npm run build -w @mcpx-protocol/client",
+    "build:agent": "npm run build -w @mcpx-protocol/agent",
+    "test:client": "npm run test -w @mcpx-protocol/client",
+    "test:agent": "npm run test -w @mcpx-protocol/agent",
     "clean": "npm run clean --workspaces --if-present"
   },
   "devDependencies": {
