--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,6 +11,7 @@
     "dev": "tsup --watch",
     "start": "node dist/cli.js",
     "cli": "tsx src/cli.ts",
+    "cli:blessed": "tsx src/cli-blessed.ts",
     "test": "vitest",
     "lint": "tsc --noEmit",
     "clean": "rm -rf dist"
@@ -26,14 +27,16 @@
   "license": "MIT",
   "dependencies": {
     "@mcpx-protocol/client": "file:../client",
+    "@types/blessed": "^0.1.25",
+    "blessed": "^0.1.81",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "inquirer": "^9.2.15",
     "ora": "^8.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.14.0",
     "@types/inquirer": "^9.0.7",
+    "@types/node": "^20.14.0",
     "tsup": "^8.0.0",
     "tsx": "^4.7.0",
     "typescript": "^5.5.0",
