Fix dangling mcpxp references

--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mcpxp/gateway",
+  "name": "@mcpx-protocol/gateway",
   "version": "0.1.0",
   "description": "MCPx Reference Gateway Server",
   "main": "dist/index.js",
