--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "example:echo": "cd examples/echo-bot && npm start",
     "example:calculator": "cd examples/calculator-agent && npm start",
     "example:coordinator": "cd examples/coordinator-agent && npm start",
+    "example:documents": "cd examples/documents-agent && npm start",
     "example:openai": "cd examples/openai-agent && npm start",
-    "example:all": "npm run example:echo & npm run example:calculator & npm run example:coordinator & wait",
+    "example:all": "npm run example:echo & npm run example:calculator & npm run example:coordinator & npm run example:documents & wait",
     "cli": "npm run cli -w @mcpx-protocol/cli",
     "cli:blessed": "npm run cli:blessed -w @mcpx-protocol/cli",
     "cli:test": "npm run cli:blessed -w @mcpx-protocol/cli ws://localhost:3000 test-room test-user"
