Use an example config for bridge agent and ignore the resulting runtime config

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ packages/web-client/.vite/
 # Monorepo
 lerna-debug.log
 .changelog/
+
+# Runtime configuration files with tokens
+examples/documents-agent/bridge-config.json
