--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -50,6 +50,15 @@
     "dist",
     "README.md"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rjcorwin/mcpx-protocol.git",
+    "directory": "packages/client"
+  },
+  "homepage": "https://github.com/rjcorwin/mcpx-protocol#readme",
+  "bugs": {
+    "url": "https://github.com/rjcorwin/mcpx-protocol/issues"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
