Protocol Spec Changes: v0->v0.0 and new v0.1

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,7 @@ lerna-debug.log
 
 # Runtime configuration files with tokens
 examples/documents-agent/bridge-config.json
+
+# Supporting docs
+modelcontextprotocol
+TODO.md
