--- a/sdk/typescript-sdk/gateway/package.json
+++ b/sdk/typescript-sdk/gateway/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@meup/agent",
+  "name": "@meup/gateway",
   "version": "0.2.0",
-  "description": "MEUP agent SDK - Build agents for the Multi-Entity Unified-context Protocol",
+  "description": "MEUP gateway - Reference implementation of the Multi-Entity Unified-context Protocol gateway",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -15,6 +15,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
+    "start": "node dist/index.js",
+    "start:dev": "tsx src/server.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
@@ -23,8 +25,8 @@
   },
   "keywords": [
     "meup",
-    "mcp",
-    "agent",
+    "gateway",
+    "websocket",
     "multi-entity",
     "unified-context",
     "protocol"
@@ -32,12 +34,23 @@
   "author": "MEUP Working Group",
   "license": "MIT",
   "dependencies": {
-    "@meup/client": "^0.2.0"
+    "ws": "^8.18.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "uuid": "^10.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
+    "@types/ws": "^8.5.10",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/uuid": "^10.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@vitest/ui": "^2.0.0",
     "tsup": "^8.0.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.5.0",
     "vitest": "^2.0.0",
     "@vitest/coverage-v8": "^2.0.0"
@@ -49,7 +62,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/rjcorwin/mcpx-protocol.git",
-    "directory": "sdk/typescript-sdk/agent"
+    "directory": "sdk/typescript-sdk/gateway"
   },
   "homepage": "https://github.com/rjcorwin/mcpx-protocol#readme",
   "bugs": {
