--- a/cli/package.json
+++ b/cli/package.json
@@ -1,19 +1,13 @@
 {
   "name": "@meup/cli",
-  "version": "0.2.0",
-  "description": "MEUP CLI - Command-line tools for the Multi-Entity Unified-context Protocol",
+  "version": "0.1.0",
+  "description": "MEUP CLI - Minimal implementation for testing",
   "bin": {
     "meup": "./bin/meup.js"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.js",
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "test": "vitest",
-    "test:e2e": "npm run build && ./tests/e2e/run.sh",
-    "lint": "tsc --noEmit",
-    "clean": "rm -rf dist"
+    "test": "node tests/run-tests.js"
   },
   "keywords": [
     "meup",
@@ -29,33 +23,13 @@
   "author": "MEUP Working Group",
   "license": "MIT",
   "dependencies": {
-    "@meup/types": "^0.2.0",
-    "@meup/client": "^0.2.0",
-    "@meup/gateway": "^0.2.0",
     "commander": "^11.0.0",
     "ws": "^8.18.0",
-    "jsonwebtoken": "^9.0.2",
-    "chalk": "^5.3.0",
-    "ora": "^7.0.0",
-    "inquirer": "^9.2.0",
-    "js-yaml": "^4.1.0",
-    "dotenv": "^16.3.1",
-    "winston": "^3.11.0",
-    "readline": "^1.3.0"
+    "express": "^4.18.2"
   },
-  "devDependencies": {
-    "@types/node": "^20.14.0",
-    "@types/ws": "^8.5.10",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/inquirer": "^9.0.7",
-    "@types/js-yaml": "^4.0.9",
-    "@vitest/ui": "^2.0.0",
-    "tsup": "^8.0.0",
-    "typescript": "^5.5.0",
-    "vitest": "^2.0.0"
-  },
+  "devDependencies": {},
   "files": [
-    "dist",
+    "src",
     "bin",
     "README.md"
   ],
@@ -69,6 +43,6 @@
     "url": "https://github.com/rjcorwin/mcpx-protocol/issues"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=16.0.0"
   }
 }
