--- a/tests/test-spaces/scenario-1-basic/space.yaml
+++ b/tests/test-spaces/scenario-1-basic/space.yaml
@@ -12,12 +12,13 @@ participants:
     fifo: false  # Agent doesn't need FIFOs
     auto_start: true
     command: "node"
-    args: ["./agents/echo.js", "--gateway", "ws://localhost:{{PORT}}", "--space", "test-space", "--token", "echo-token"]
+    args: ["./agents/echo.js", "--gateway", "ws://localhost:${PORT}", "--space", "test-space", "--token", "echo-token"]
     
   test-client:
     tokens: ["test-token"]
     capabilities:
       - kind: chat
       - kind: system/*
-    fifo: true  # Create FIFOs for test client
-    auto_connect: true  # Auto-connect the test client
+    fifo: true  # Create input FIFO
+    output_log: "./logs/test-client-output.log"  # Output to file instead of FIFO
+    auto_connect: true  # Auto-connect when space starts
