--- a/tests/test-spaces/scenario-2-mcp/space.yaml
+++ b/tests/test-spaces/scenario-2-mcp/space.yaml
@@ -11,7 +11,7 @@ participants:
       - kind: system/*
     auto_start: true
     command: "node"
-    args: ["./agents/calculator.js", "--gateway", "ws://localhost:{{PORT}}", "--space", "test-space", "--token", "calculator-token"]
+    args: ["./agents/calculator.js", "--gateway", "ws://localhost:${PORT}", "--space", "test-space", "--token", "calculator-token"]
     
   test-client:
     tokens: ["test-token"]
@@ -21,4 +21,5 @@ participants:
           method: tools/*
       - kind: system/*
     fifo: true
+    output_log: "./logs/test-client-output.log"
     auto_connect: true
