--- a/tests/test-spaces/scenario-5-reasoning/space.yaml
+++ b/tests/test-spaces/scenario-5-reasoning/space.yaml
@@ -11,7 +11,7 @@ participants:
       - kind: system/*
     auto_start: true
     command: "node"
-    args: ["./agents/calculator.js", "--gateway", "ws://localhost:{{PORT}}", "--space", "test-space", "--token", "calculator-token"]
+    args: ["./agents/calculator.js", "--gateway", "ws://localhost:${PORT}", "--space", "test-space", "--token", "calculator-token"]
     
   research-agent:
     tokens: ["research-token"]
@@ -23,4 +23,5 @@ participants:
       - kind: chat
       - kind: system/*
     fifo: true
+    output_log: "./logs/research-agent-output.log"
     auto_connect: true
