--- a/tests/test-spaces/scenario-6-errors/space.yaml
+++ b/tests/test-spaces/scenario-6-errors/space.yaml
@@ -10,4 +10,5 @@ participants:
       - kind: chat
       - kind: system/*
     fifo: true
+    output_log: "./logs/test-client-output.log"
     auto_connect: true
