--- a/tests/scenario-2-mcp/space.yaml
+++ b/tests/scenario-2-mcp/space.yaml
@@ -11,7 +11,7 @@ participants:
       - kind: system/*
     auto_start: true
     command: "node"
-    args: ["../agents/calculator.js", "--gateway", "ws://localhost:${PORT}", "--space", "test-space", "--token", "calculator-token"]
+    args: ["../agents/calculator-participant.js", "--gateway", "ws://localhost:${PORT}", "--space", "test-space", "--token", "calculator-token"]
     
   test-client:
     tokens: ["test-token"]
