--- a/bridge/package.json
+++ b/bridge/package.json
@@ -15,6 +15,8 @@
     "test": "node test/test-bridge.js"
   },
   "dependencies": {
+    "@meup/participant": "file:../sdk/typescript-sdk/participant",
+    "@meup/types": "file:../sdk/typescript-sdk/types",
     "ws": "^8.16.0",
     "commander": "^11.1.0",
     "debug": "^4.3.4"
