--- a/sdk/typescript-sdk/gateway/package.json
+++ b/sdk/typescript-sdk/gateway/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@meup/gateway",
+  "name": "@mew-protocol/gateway",
   "version": "0.2.0",
-  "description": "MEUP gateway - Reference implementation of the Multi-Entity Unified-context Protocol gateway",
+  "description": "MEW gateway - Reference implementation of the Multi-Entity Workspace Protocol gateway",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -24,17 +24,17 @@
     "clean": "rm -rf dist"
   },
   "keywords": [
-    "meup",
+    "mew",
     "gateway",
     "websocket",
     "multi-entity",
-    "unified-context",
+    "workspace",
     "protocol"
   ],
-  "author": "MEUP Working Group",
+  "author": "MEW Working Group",
   "license": "MIT",
   "dependencies": {
-    "@meup/types": "^0.2.0",
+    "@mew-protocol/types": "file:../types",
     "ws": "^8.18.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
