--- a/bridge/package.json
+++ b/bridge/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "mew-bridge": "./bin/meup-bridge.js"
+    "mew-bridge": "./bin/mew-bridge.js"
   },
   "scripts": {
     "build": "tsc",
