--- a/cli/package.json
+++ b/cli/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "MEW Protocol CLI - Minimal implementation for testing",
   "bin": {
-    "mew": "./bin/meup.js"
+    "mew": "./bin/mew.js"
   },
   "main": "src/index.js",
   "scripts": {
