--- a/cli/package.json
+++ b/cli/package.json
@@ -23,10 +23,12 @@
   "author": "MEW Protocol Working Group",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "express": "^4.18.2",
     "js-yaml": "^4.1.0",
     "pm2": "^6.0.10",
+    "uuid": "^9.0.0",
     "ws": "^8.18.0"
   },
   "files": [
