--- a/cli/package.json
+++ b/cli/package.json
@@ -30,8 +30,10 @@
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "express": "^4.18.2",
+    "ink": "^3.2.0",
     "js-yaml": "^4.1.0",
     "pm2": "^6.0.10",
+    "react": "^18.2.0",
     "uuid": "^9.0.0",
     "ws": "^8.18.0"
   },
